// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review.connector should call clearDomainFromCreateCommunity from mapDispatchToProps 1`] = `
Object {
  "payload": null,
  "type": "CreateCommunity/ADD_COMMUNITY_DOMAIN",
}
`;

exports[`Review.connector should call clearNameFromCreateCommunity from mapDispatchToProps 1`] = `
Object {
  "payload": null,
  "type": "CreateCommunity/ADD_COMMUNITY_NAME",
}
`;

exports[`Review.connector should call fetchCommunityExists from mapDispatchToProps 1`] = `
Object {
  "graphql": Object {
    "query": "
        query ($slug: String) {
          communityExists (slug: $slug) {
            exists
          }
        }
      ",
    "variables": Object {
      "slug": "slug",
    },
  },
  "type": "CreateCommunity/FETCH_COMMUNITY_EXISTS",
}
`;

exports[`Review.connector should call goToCommunity from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/c/communityDomain",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Review.connector should call goToStep from mapDispatchToProps 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/create-community/name",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;
